# paddleocr-vl-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
bench/omnidocbench/: analyze_visual_drop.py  cdm_nest_ab.py  cdm_score.py  cdm_smoke.py  clone_eval_code.sh  download_dataset.sh  dump_nested_parity.py  dump_otsl_parity.py  error_budget.py  filter_nested.py  full1651.stems  layout_probe.py  llamacpp_build.sh  llamacpp_fetch_gguf.sh  llamacpp_recognize.py  llamacpp_serve.sh  loadonce_parity.sh  make_subset.py  official_layout.py  parity24.stems  per_category_table.py  run_pipeline.sh  sample_stratified.py  score_when_done.sh  setup_cdm_env.sh  setup_scorer_venv.sh  speed120.stems  speed_loadonce.py  speed_stats.py  spotcheck_layout_onnx.py  stage_split.py
bench/omnidocbench/patches/: 0001-guard-dangling-truncated-anno-id.patch
bench/omnidocbench/results/: cdm1651_quick_match_metric_result.json  cdm_llamacpp1649_quick_match_metric_result.json  cdm_nest_ab.json  full1651_allfix_quick_match_metric_result.json  full1651_keepvis_quick_match_display_formula_per_page_edit.json  full1651_keepvis_quick_match_metric_result.json  full1651_keepvis_quick_match_reading_order_per_page_edit.json  full1651_keepvis_quick_match_table_per_page_edit.json  full1651_keepvis_quick_match_table_per_table_TEDS.json  full1651_keepvis_quick_match_text_block_per_page_edit.json  full1651_nonest2_quick_match_metric_result.json  full1651_nonest_quick_match_metric_result.json  (+31 more)
docs/: BENCHMARKS.md  FUTURE_WORK.md
examples/: pdf_to_markdown.sh  recognize.rs
src/: assemble.rs  lib.rs  main.rs
tests/: otsl_html_parity.rs  parity_layout.rs  parity_nested.rs  ref_postproc_parity.rs
(+19 files in other folders)
